--- a/waybar/style.css
+++ b/waybar/style.css
@@ -48,27 +48,22 @@ button:hover {
     box-shadow: inset 0 -3px #ffffff;
 }
 
-/* you can set a style on hover for any module like this */
-#pulseaudio:hover {
-    background-color: #a37800;
-}
-
-#workspaces button {
+#tags button {
     padding: 0 5px;
     background-color: transparent;
     color: #ffffff;
 }
 
-#workspaces button:hover {
+#tags button:hover {
     background: rgba(0, 0, 0, 0.2);
 }
 
-#workspaces button.focused {
+#tags button.focused {
     background-color: #64727D;
     box-shadow: inset 0 -3px #ffffff;
 }
 
-#workspaces button.urgent {
+#tags button.urgent {
     background-color: #eb4d4b;
 }
 
@@ -99,7 +94,7 @@ button:hover {
 }
 
 #window,
-#workspaces {
+#tags {
     margin: 0 4px;
 }
 
